added semantic tags

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <!-- Updated the page title to be more SEO friendly -->
+    <title>Horiseon | Horiseon Social Solution Services, Inc.</title>
 </head>
 
 <body>
+    <!-- updated to use header and nav tag to add semantic value  -->
     <header class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1>Hori<abbr title="Search Engine Optimization"
+            class="seo">seo</abbr>n</h1>
         <nav>
             <ul>
                 <li>
